tests/error/comptime/invalid_result_value5.bz
// error: invalid value of type '[*int32]' returned from compile time execution
// note: invalid value of type '*int32' for element 0 in tuple of type '[*int32]'
// note: a pointer of type '*int32' is not a constant expression
// error: expression must be a constant expression
consteval p = {
	let i = 0;
	[ &i ]
};
